# ArcherStone

./: CMakeLists.txt  Game.cpp  Game.h  README.md  main.cpp
Entitys/: Entity.cpp  Entity.h  Platform.cpp  Platform.h
Entitys/Characters/: Character.cpp  Character.h  Player.cpp  Player.h
GraphicsElements/: Button.cpp  Button.h
Managers/: CollisionManager.cpp  CollisionManager.h  EventsManager.cpp  EventsManager.h  GraphicsManager.cpp  GraphicsManager.h  StateManager.cpp  StateManager.h
Mapa/: QuadTree.cpp  QuadTree.h  tilemap.cpp  tilemap.h
Mapa/tiled/: Fase1_1.tmj  Fase1_1.xcf  MapaJogo.tiled-session  blocks.tsx
Observers/: FaseStateObserver.cpp  FaseStateObserver.h  MenusObserver.cpp  MenusObserver.h  Observer.cpp  Observer.h  PlayerObserver.cpp  PlayerObserver.h
States/: State.cpp  State.h
States/Fases/: FaseState.cpp  FaseState.h  GameState.cpp  GameState.h
States/Menus/: MenuInicialState.cpp  MenuInicialState.h  MenuOptionsState.cpp  MenuOptionsState.h  MenuPauseState.cpp  MenuPauseState.h  MenuRankingState.cpp  MenuRankingState.h  MenuState.cpp  MenuState.h
